@@ -1030,7 +1030,8 @@ setRlibs <- function(lib0 = "", pkgdir = ".", suggests = FALSE,
                           sprintf("tools::checkFF(dir = \"%s\")\n", pkgdir))
             out <- R_runR2(Rcmd)
             if (length(out)) {
-                if(any(grepl("Foreign function calls without", out)))
+                if(any(grepl("Foreign function call(s) without", out)) ||
+                   (!is_base_pkg && any(grepl("in a base package:", out))))
                     warningLog(Log)
                 else noteLog(Log)
                 printLog(Log, paste(c(out, ""), collapse = "\n"))
